--- a/config/theme.css
+++ b/config/theme.css
@@ -1,10 +1,10 @@
 :root {
-  --primary: #fafafa;
-  --primary-text: #1b1b1b;
-  --secondary: #1b1b1b;
-  --secondary-text: #fafafa;
-  --accent: #fafafa;
-  --accent-text: #1b1b1b;
+  --primary: #0db915;
+  --primary-text: #f3f2f2;
+  --secondary: #ffffff;
+  --secondary-text: hsl(0, 0%, 0%);
+  --accent: #0a0a0a;
+  --accent-text: #fffdfd;
 }
 
 #main-container{
