--- a/config/theme.css
+++ b/config/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #0db915;
+  --primary: #0a0a0a;
   --primary-text: #f3f2f2;
   --secondary: #ffffff;
   --secondary-text: hsl(0, 0%, 0%);
