--- a/config/theme.css
+++ b/config/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #F0F8FF;
+  --primary: #FF0080;
   --primary-text: #f3f2f2;
   --secondary: #ffffff;
   --secondary-text: hsl(0, 0%, 0%);
