--- a/config/theme.css
+++ b/config/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #572364;
+  --primary: #6d2c7d;
   --primary-text: #f3f2f2;
   --secondary: #ffffff;
   --secondary-text: hsl(0, 0%, 0%);
